Introduce Node.js-based load gen deployed on GCR via app.json

--- a/app.json
+++ b/app.json
@@ -25,6 +25,11 @@
             "commands": [
                 "bash deploy.sh"
             ]
+        },
+        "postcreate": {
+            "commands": [
+                "bash run_demo.sh"
+            ]
         }
     }
 }
