Push app builds to Google Cloud Build

--- a/load-gen/package.json
+++ b/load-gen/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "batch-producer-nodejs",
+  "name": "load-gen",
   "version": "1.0.0",
-  "description": "A headless producer application for Cloud Run",
+  "description": "A headless producer load-test generator for the Instana Cloud Run demo",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,11 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@grpc/grpc-js": "^1.1.8",
-    "express": "^4.17.1",
-    "google-protobuf": "^3.13.0",
-    "grpc": "^1.24.3",
-    "loadtest": "^5.0.0",
-    "request": "^2.88.2"
+    "loadtest": "^5.0.0"
   }
 }
